--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -42,4 +42,8 @@ RUN mkdir -p image
 WORKDIR /home/image
 RUN wget --progress=bar:force https://neuralstylefiles.blob.core.windows.net/images/close_up_01.jpg
 
+# Update
+WORKDIR /home/3d-photo-inpainting
+RUN git pull
+
 WORKDIR /home/3d-photo-inpainting
