--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -39,6 +39,7 @@ RUN git pull
 
 #Install packages
 RUN poetry install
+RUN source $(poetry env info --path)/bin/activate
 
 #Testimage
 WORKDIR /home
