--- a/docker/3d-photo-inpainting/Dockerfile
+++ b/docker/3d-photo-inpainting/Dockerfile
@@ -34,4 +34,4 @@ RUN python download_models.py /app/
 # Copy sources
 COPY ["/src/*.py" ,"/app/"]
 COPY ["/src/MiDaS/*.py" ,"/app/MiDaS/"]
-
+COPY ["config/default.yml" ,"/app/"]
