--- a/docker/3d-photo-inpainting/config/default.yml
+++ b/docker/3d-photo-inpainting/config/default.yml
@@ -7,11 +7,21 @@ require_midas: True
 depth_mode: 0
 fps: 30
 num_frames: 240
-x_shift_range: [0.00, 0.00, -0.015, -0.015]
-y_shift_range: [0.00, 0.00, -0.015, -0.00]
-z_shift_range: [-0.05, -0.05, -0.05, -0.05]
-traj_types: ['double-straight-line', 'double-straight-line', 'circle', 'circle']
-video_postfix: ['dolly-zoom-in', 'zoom-in', 'circle', 'swing']
+## Own Params
+interpolation_kind: quadratic
+coordinates: [
+  [0.05, 0, 0],
+  [0, 0, 0],
+  [-0.05, 0, 0],
+	[0,0,-0.02],
+	[0,0.02,-0.04]
+]
+###
+x_shift_range: [0.00]
+y_shift_range: [0.00]
+z_shift_range: [-0.05]
+traj_types: ['double-straight-line']
+video_postfix: ['dolly-zoom-in']
 specific: ''
 longer_side_len: 1024
 src_folder: image
