--- a/docker/3d-photo-inpainting/config/default.yml
+++ b/docker/3d-photo-inpainting/config/default.yml
@@ -9,13 +9,7 @@ fps: 30
 num_frames: 240
 ## Own Params
 interpolation_kind: quadratic
-coordinates: [
-  [0.05, 0, 0],
-  [0, 0, 0],
-  [-0.05, 0, 0],
-	[0,0,-0.02],
-	[0,0.02,-0.04]
-]
+coordinates: [[0.05, 0, 0],[0, 0, 0],[-0.05, 0, 0],[0,0,-0.02],[0,0.02,-0.04]]
 ###
 x_shift_range: [0.00]
 y_shift_range: [0.00]
