added result name

--- a/docker/3d-photo-inpainting/config/default.yml
+++ b/docker/3d-photo-inpainting/config/default.yml
@@ -10,6 +10,7 @@ num_frames: 240
 ## Own Params
 interpolation_kind: quadratic
 coordinates: [[0.05, 0, 0],[0, 0, 0],[-0.05, 0, 0],[0,0,-0.02],[0,0.02,-0.04]]
+result_name: test01.mp4
 ###
 x_shift_range: [0.00]
 y_shift_range: [0.00]
