--- a/docker/3d-photo-inpainting/config/default.yml
+++ b/docker/3d-photo-inpainting/config/default.yml
@@ -8,6 +8,8 @@ depth_mode: 0
 fps: 30
 num_frames: 240
 ## Own Params
+content_name: "test01.jpg",
+recreate_depth_mesh: False
 interpolation_kind: quadratic
 coordinates: [[0.05, 0, 0],[0, 0, 0],[-0.05, 0, 0],[0,0,-0.02],[0,0.02,-0.04]]
 result_name: test01.mp4
