--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -17,12 +17,12 @@ ENV PATH="~/.local/bin:${PATH}"
 
 # Turn off virtual env creation
 # https://github.com/orgs/python-poetry/discussions/1879
-RUN poetry config virtualenvs.create false
+#RUN poetry config virtualenvs.create false
 
 #Install dependencies
-COPY ["/src/pyproject.toml", "/app/"]
-WORKDIR /app
-RUN poetry install
+#COPY ["/src/pyproject.toml", "/app/"]
+#WORKDIR /app
+#RUN poetry install
 
 # Clone BoostingMonocularDepth Repo
 RUN git clone https://github.com/google-research/frame-interpolation
