--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -20,9 +20,9 @@ ENV PATH="~/.local/bin:${PATH}"
 RUN ~/.local/bin/poetry config virtualenvs.create false
 
 #Install dependencies
-#COPY ["/src/pyproject.toml", "/app/"]
-#WORKDIR /app
-#RUN poetry install
+COPY ["/src/pyproject.toml", "/app/"]
+WORKDIR /app
+RUN poetry install
 
 # Clone BoostingMonocularDepth Repo
 RUN git clone https://github.com/google-research/frame-interpolation
