--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["Sebastian Betzin <sebastian@betzin.com>"]
 
 [tool.poetry.dependencies]
+python = "^3.8"
 mediapy = "==1.0.3"
 gdown = "*"
 tensorflow = "==2.8.0"
