--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -1,4 +1,4 @@
-FROM anibali/pytorch:1.8.1-cuda11.1
+FROM  nvidia/cuda:11.1.1-runtime-ubuntu18.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.0"
 USER root
@@ -9,7 +9,10 @@ RUN apt-get update && apt-get upgrade -y
 # Install Timezone Silent
 # https://serverfault.com/questions/949991/how-to-install-tzdata-on-a-ubuntu-docker-image
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
-RUN apt-get install -y nano wget curl git sudo
+RUN apt-get install -y nano wget curl git sudo libglib2.0-0 libsm6 libxrender1 libxext6 fontconfig
+
+#Install Python and Add python alias for python3
+RUN apt-get install python3.8 pip python3.8-venv -y && update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
 # Install poetry
 RUN curl -sSL https://install.python-poetry.org | python3 - 
