models to a different directory

--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -23,9 +23,8 @@ ENV PATH="~/.local/bin:${PATH}"
 RUN ~/.local/bin/poetry config virtualenvs.create false
 
 RUN apt-get install -y unzip
-RUN mkdir -p /pretrained_models
 RUN wget -O /tmp/models.zip https://neuralstylefiles.blob.core.windows.net/models/frame-interpolation/pretrained_models-20230501T220609Z-001.zip
-RUN unzip /tmp/models.zip -d /pretrained_models
+RUN unzip /tmp/models.zip -d /
 RUN rm /tmp/models.zip
 
 #Install dependencies
