--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -1,4 +1,4 @@
-FROM  nvidia/cuda:11.1.1-runtime-ubuntu20.04
+FROM  nvidia/cuda:11.1.1-cudnn8-runtime-ubuntu20.04
 LABEL maintainer="Sebastian Betzin, https://github.com/sbetzin"
 LABEL version="1.0.0"
 USER root
