--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -10,10 +10,12 @@ mediapy = "^1.0.3"
 tensorflow = "==2.6.2"
 tensorflow-datasets = "==4.4.0"
 tensorflow-addons = "==0.15.0"
-numpy = "*"
+numpy = "^1.19.5"
 scikit-image = "^0.19.1"
 natsort = "*"
 tqdm= "^4.64.1"
+protobuf = "<3.21"
+apache-beam = "*"
 
 piexif = "*"
 azure-storage-queue = "*"
