added apache beam

--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -15,9 +15,9 @@ scikit-image = "^0.19.1"
 natsort = "*"
 tqdm= "^4.64.1"
 protobuf = "<3.21"
-apache-beam = "*"
+apache-beam = "==2.34.0"
 
-piexif = "*"
+piexif = "^1.1.3"
 azure-storage-queue = "*"
 azure-storage-blob = "*"
 applicationinsights = "*"
