--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -16,7 +16,11 @@ natsort = "*"
 tqdm= "^4.64.1"
 protobuf = "<3.21"
 apache-beam = "==2.34.0"
-
+absl-py = "^0.12.0"
+gin-config = "^0.5.0"
+parameterized = "*"
+google-cloud-bigquery-storage = "==1.1.0"
+ 
 piexif = "^1.1.3"
 azure-storage-queue = "*"
 azure-storage-blob = "*"
