--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -7,19 +7,16 @@ authors = ["Sebastian Betzin <sebastian@betzin.com>"]
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 mediapy = "==1.0.3"
-tensorflow = "==2.6.2"
-tensorflow-datasets = "==4.4.0"
-tensorflow-addons = "==0.15.0"
-numpy = "==1.19.5"
-scikit-image = "==0.19.1"
+tensorflow = "==2.8.0"
+tensorflow-datasets = "==4.8.3"
+numpy = "==1.22.4"
+scikit-image = "==0.19.3"
 natsort = "==8.1.0"
-tqdm= "==4.64.1"
-protobuf = "<3.21"
-apache-beam = "==2.34.0"
-absl-py = "==0.12.0"
+tqdm= "==4.65.0"
+protobuf = "==3.20.3"
+absl-py = "==1.4.0"
 gin-config = "==0.5.0"
-parameterized = "==0.8.1"
-google-cloud-bigquery-storage = "==1.1.0"
+google-cloud-bigquery-storage = "==2.19.1"
 
 piexif = "^1.1.3"
 azure-storage-queue = "*"
