--- a/docker/frame-interpolation/src/pyproject.toml
+++ b/docker/frame-interpolation/src/pyproject.toml
@@ -17,7 +17,7 @@ protobuf = "==3.20.3"
 absl-py = "==1.4.0"
 gin-config = "==0.5.0"
 google-cloud-bigquery-storage = "==2.19.1"
-apache-beam = "==2.46.0"
+apache-beam = "*"
 
 piexif = "^1.1.3"
 azure-storage-queue = "*"
