--- a/docker/frame-interpolation/Dockerfile
+++ b/docker/frame-interpolation/Dockerfile
@@ -36,6 +36,6 @@ RUN ~/.local/bin/poetry install
 RUN mkdir -p /intermediate
 
 # Copy sources. They are filtered only to .py and .yaml in the .dockerignore file
-COPY src/, .
+COPY src/ .
 
 ENTRYPOINT ["python", "/app/run.py"]
