--- a/docker/frame-interpolation/Makefile
+++ b/docker/frame-interpolation/Makefile
@@ -34,7 +34,7 @@ start-console:
 start-cog:
 	git pull
 	sudo bash -c "cd src && cog build -t test"
-	sudo nvidia-docker run --rm --gpus '"device=1"' -it --name "test" -v /root/OneDrive/_nft:/nft -p 5000:5000 test 
+	sudo nvidia-docker run --rm --gpus '"device=1"' --name "test" -v /root/OneDrive/_nft:/nft -p 5000:5000 test 
 
 stop-console:
 	nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
