--- a/docker/frame-interpolation/Makefile
+++ b/docker/frame-interpolation/Makefile
@@ -29,12 +29,12 @@ prune:
 	docker container prune --force
 	
 start-console:
-	nvidia-docker run -d --rm --gpus '"device=1"' -it -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) -v /root/OneDrive/_nft:/nft --entrypoint /bin/bash $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
+	nvidia-docker run --rm --gpus '"device=1"' -it -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) -v /root/OneDrive/_nft:/nft --entrypoint /bin/bash $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 start-cog:
 	git pull
 	sudo bash -c "cd src && cog build -t test"
-	sudo nvidia-docker run --rm --gpus '"device=1"' --name "test" -v /root/OneDrive/_nft:/nft -p 5000:5000 test 
+	sudo nvidia-docker run -d --rm --gpus '"device=1"' --name "test" -v /root/OneDrive/_nft:/nft -p 5000:5000 test 
 
 stop-console:
 	nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
