--- a/docker/frame-interpolation/Makefile
+++ b/docker/frame-interpolation/Makefile
@@ -36,6 +36,9 @@ start-cog:
 	sudo bash -c "cd src && cog build -t test"
 	sudo nvidia-docker run -d --rm --gpus '"device=1"' --name "test" -v /root/OneDrive/_nft:/nft -p 5000:5000 test 
 
+stop-cog:
+	sudo nvidia-docker stop test
+
 stop-console:
 	nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
 	docker container prune --force
