--- a/docker/frame-interpolation/src/cog.yaml
+++ b/docker/frame-interpolation/src/cog.yaml
@@ -11,6 +11,7 @@ build:
     - "unzip"
   python_packages:
     - "ipython==7.30.1"
+    - "numpy==1.22.4"
     - "tensorflow-gpu==2.8.0"
     - "tensorflow-datasets==4.8.3"
     - "absl-py==1.4.0"
@@ -19,6 +20,11 @@ build:
     - "mediapy==1.0.3"
     - "scikit-image==0.19.1"
     - "apache-beam"
+    - "natsort==8.1.0"
+    - "tqdm==4.65.0"
+    - "protobuf==3.20.3"
+    - "google-cloud-bigquery-storage==2.19.1"
+
   run:
     - wget -O /tmp/models.zip https://neuralstylefiles.blob.core.windows.net/models/frame-interpolation/pretrained_models-20230501T220609Z-001.zip
     - unzip /tmp/models.zip -d /
