--- a/docker/3d-photo-inpainting/Makefile
+++ b/docker/3d-photo-inpainting/Makefile
@@ -1,45 +1,33 @@
-.PHONY: all build build-nocache rebuild clean start stop restart logs pull console-start console-stop console-logs prune
+.PHONY: build build-nocache rebuild start stop restart logs start-console stop-console
 IMGAUTHOR=sbetzin
 IMGNAME=3d-photo-inpainting
 IMGTAG=1.0.1
 	
 build:
-	nvidia-docker build -f Dockerfile -t $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG) .
+	sudo nvidia-docker build -f Dockerfile -t $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG) .
 
 build-nocache:
-	nvidia-docker build -f Dockerfile --no-cache -t $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG) .
-
-clean:
-	docker rmi $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker build -f Dockerfile --no-cache -t $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG) .
 
 start:
-	nvidia-docker run -d --gpus '"device=1"' -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) -v ~/depth:/depth -v ~/mesh:/mesh  --restart=unless-stopped $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker run -d --gpus '"device=1"' -e AzureStorageConnectionString --name $(IMGNAME) -v ~/depth:/depth -v ~/mesh:/mesh -v /root/OneDrive/_nft:/nft  --restart=unless-stopped $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 stop:
-	nvidia-docker stop $(shell docker ps -q --filter "name=$(IMGNAME)")
-	docker container prune --force
-
-pull:
-	docker pull $(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker stop $(shell docker ps -q --filter "name=$(IMGNAME)")
+	sudo nvidia-docker container prune --force
 	
 logs:
-	nvidia-docker logs $(shell docker ps -q --filter "name=$(IMGNAME)")
+	sudo nvidia-docker logs $(shell docker ps -q --filter "name=$(IMGNAME)")
 
-prune:
-	docker container prune --force
-	
 start-console:
-	nvidia-docker run --rm --gpus '"device=1"' -it -e AzureStorageConnectionString -e AzureStorageQueueName --name $(IMGNAME) -v ~/depth:/depth -v ~/mesh:/mesh --entrypoint /bin/bash $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker run --rm --gpus '"device=1"' -it -e AzureStorageConnectionString --name $(IMGNAME) -v ~/depth:/depth -v ~/mesh:/mesh -v /root/OneDrive/_nft:/nft --entrypoint /bin/bash $(IMGAUTHOR)/$(IMGNAME):$(IMGTAG)
 
 stop-console:
-	nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
-	docker container prune --force
-	
-logs-console:
-	nvidia-docker logs $(shell docker ps -q --filter "name=$(IMGNAME)-console")
+	sudo nvidia-docker stop $(shell docker ps -q --filter "name$=(IMGNAME)-console")
+	sudo docker container prune --force
 
-restart-console: console-stop console-start
+git-pull:
+	git pull
 
-rebuild: stop build start
+rebuild: stop git-pull build start
 restart: stop start
-all: build
