--- a/docker/3d-photo-inpainting/config/default.yml
+++ b/docker/3d-photo-inpainting/config/default.yml
@@ -21,10 +21,10 @@ traj_types: ['double-straight-line']
 video_postfix: ['dolly-zoom-in']
 specific: ''
 longer_side_len: 1024
-src_folder: image
+src_folder: /nft/in
 depth_folder: /depth
 mesh_folder: /mesh
-video_folder: video
+video_folder: /nft/video/_in
 load_ply: True
 save_ply: True
 inference_video: True
