--- a/src/NeuralStyle.Console/NeuralStyle.Console.csproj
+++ b/src/NeuralStyle.Console/NeuralStyle.Console.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="3dPhotoInpainting.cs" />
     <Compile Include="FrameInterpolation.cs" />
     <Compile Include="NeuralStyleTransfer.cs" />
     <Compile Include="Program.cs" />
