--- a/docker/mask-transfer/Makefile
+++ b/docker/mask-transfer/Makefile
@@ -1,17 +1,16 @@
-.PHONY: build rebuild start start-two stop restart logs start-console stop-console clear-logs
-IMGNAME=sbetzin/neural-style-transfer
+.PHONY: build rebuild start start-two stop restart logs start-console stop-console test
+NAME=mask-transfer
+IMGNAME=sbetzin/mask-transfer
 IMGTAG=1.0.0
-	
+
+test:
+	echo $(NAME)
 build:
 	sudo nvidia-docker build -f Dockerfile -t $(IMGNAME):$(IMGTAG) .
 
 start:
-	sudo nvidia-docker run -d --gpus '"device=2"' -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name neural-style-transfer --restart=unless-stopped $(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker run -d -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name >$(NAME) --restart=unless-stopped $(IMGNAME):$(IMGTAG)
 
-start-two:
-	sudo nvidia-docker run -d --gpus '"device=1"' -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name neural-style-transfer-1 --restart=unless-stopped $(IMGNAME):$(IMGTAG)
-	sudo nvidia-docker run -d --gpus '"device=2"' -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name neural-style-transfer-2 --restart=unless-stopped $(IMGNAME):$(IMGTAG)
-	
 stop:
 	sudo nvidia-docker stop $(shell sudo docker ps -q --filter "ancestor=$(IMGNAME):$(IMGTAG)")
 	sudo nvidia-docker container prune --force
@@ -20,10 +19,10 @@ logs:
 	sudo nvidia-docker logs $(shell sudo docker ps -q --filter "ancestor=$(IMGNAME):$(IMGTAG)") -f
 
 start-console:
-	sudo nvidia-docker run --rm -it --gpus '"device=2"' -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name neural-style-transfer-console --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
+	sudo nvidia-docker run --rm -it -e AzureStorageConnectionString -v /root/OneDrive/_nft:/nft --name $(NAME)-console --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
 
 stop-console:
-	sudo nvidia-docker stop $(shell sudo docker ps -q --filter "name$=(IMGNAME)-console")
+	sudo nvidia-docker stop $(shell sudo docker ps -q --filter "name=$(NAME)-console")
 	sudo docker container prune --force
 
 git-pull:
@@ -31,6 +30,3 @@ git-pull:
 
 rebuild: stop git-pull build start
 restart: stop start
-
-clear-logs:
-	truncate -s 0 /var/lib/docker/containers/**/*-json.log
