--- a/src/NeuralStyle.Core/NeuralStyle.Core.csproj
+++ b/src/NeuralStyle.Core/NeuralStyle.Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Features\CreateMiningMetaData.cs" />
     <Compile Include="Features\CreateSeries.cs" />
     <Compile Include="Features\Templating.cs" />
+    <Compile Include="Folders\FolderCheck.cs" />
     <Compile Include="Imaging\ExifAdapter.cs" />
     <Compile Include="Features\CreateJobs.cs" />
     <Compile Include="Features\FindMissingCombinations.cs" />
@@ -83,16 +84,16 @@
       <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Azure.Core">
-      <Version>1.30.0</Version>
+      <Version>1.31.0</Version>
     </PackageReference>
     <PackageReference Include="Azure.Security.KeyVault.Secrets">
       <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="Azure.Storage.Blobs">
-      <Version>12.15.1</Version>
+      <Version>12.16.0</Version>
     </PackageReference>
     <PackageReference Include="Azure.Storage.Queues">
-      <Version>12.13.1</Version>
+      <Version>12.14.0</Version>
     </PackageReference>
     <PackageReference Include="ExifLib">
       <Version>1.7.0</Version>
