--- a/docker/neural-style-transfer/Dockerfile
+++ b/docker/neural-style-transfer/Dockerfile
@@ -20,6 +20,8 @@ RUN chmod 777 /env/
 #USER user
 RUN conda env update
 
+#Download vgg19 modell
+RUN wget -O /home/user/.cache/torch/hub/checkpoints/vgg19-dcbb9e9d.pth https://neuralstylefiles.blob.core.windows.net/models/neural-style-transfer/vgg19-dcbb9e9d.pth
 
 # Copy the neural style files (modified) -> this is why we are not cloning the orignal github files
 WORKDIR /app/
