--- a/src/NeuralStyle.Console/NeuralStyle.Console.csproj
+++ b/src/NeuralStyle.Console/NeuralStyle.Console.csproj
@@ -52,6 +52,7 @@
     <Compile Include="3dPhotoInpainting.cs" />
     <Compile Include="FrameInterpolation.cs" />
     <Compile Include="MaskTransfer.cs" />
+    <Compile Include="MovePathes\CreatePathes.cs" />
     <Compile Include="NeuralStyleTransfer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -109,5 +110,6 @@
       <Version>7.0.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
