--- a/src/NeuralStyle.Console/NeuralStyle.Console.csproj
+++ b/src/NeuralStyle.Console/NeuralStyle.Console.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyTitle>NeuralStyle.Console2</AssemblyTitle>
